[project]
name = "tune"
version = "0.1.0"
description = "Realtime FFT-based autotune for Windows."
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24",
]

[project.scripts]
tune = "tune.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tune*"]
