[project]
name = "tune"
version = "0.1.0"
description = "Realtime FFT-based autotune for Windows."
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "mido>=1.3",
    "soundfile>=0.12",
    "pydub>=0.25",
    # Python 3.13 dropped stdlib `audioop` (PEP 594); pydub needs this backport.
    "audioop-lts>=0.2; python_version >= '3.13'",
]

[project.scripts]
tune = "tune.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tune*"]
